tests/ui/feature-gates/feature-gate-supertrait-auto-impl.stderr
error[E0658]: feature is under construction
  --> $DIR/feature-gate-supertrait-auto-impl.rs:3:5
   |
LL |     auto impl Supertrait;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #149556 <https://github.com/rust-lang/rust/issues/149556> for more information
   = help: add `#![feature(supertrait_auto_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
